# ion-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  run  run.rs  run.sh  test.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tracking-issue--removal-.md  tracking-issue.md
app/buildenv/: Dockerfile
app/src/kernel/c_entry/: main.c
app/src/kernel/ion-kernel/src/: init.rs  lib.rs  log.rs  mem.rs  panic.rs  serial.rs  test.rs  text.rs
app/src/kernel/ion-kernel/src/c_lib/: bit.rs  bit_flags.rs  mod.rs
app/src/kernel/ion-kernel/src/c_lib/libc/: error.rs  macros.rs  malloc_wraps.rs  math.rs  mem.rs  mod.rs  primitive.rs
app/src/kernel/ion-kernel/src/interrupts/: double_fault.rs  gdt.rs  mod.rs  page_fault.rs  pic8259.rs
app/src/kernel/ion-kernel/src/interrupts/keyboard/: mod.rs  ps2.rs
app/src/kernel/ion-kernel/src/io/: buf_read.rs  error.rs  mod.rs  read.rs  seek.rs  tools.rs  write.rs
app/src/kernel/ion-kernel/src/lib_alloc/: mod.rs  tests.rs
app/src/x86_64/boot/: entry.asm  entry_64.asm  header.asm
app/targets/x86_64/iso/boot/grub/: grub.cfg
