[package]
name = "ion-kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "app/src/kernel/ion-kernel/src/lib.rs"
test = false
bench = false
crate-type = ["staticlib"]


[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
cfg-if = "*"
x86_64 = "*"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
buddy_system_allocator = "*"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
default = ["test"]
test = []

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]